# mnemonic

./: .gitignore  .golangci.yml  .goreleaser.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  config.example.yaml  config.yaml  go.mod  go.sum  test_rq4_config.yaml
.claude/: settings.json
.claude/agents/: advisor-carmack.md  advisor-feynman.md  advisor-hickey.md  advisor-hopper.md  advisor-karpathy.md  advisor-linus.md  advisor-musk.md
.claude/hooks/: build-check.sh  no-secrets.sh  protect-git.sh  session-context.sh
.claude/rules/: advisory-board.md  code-quality.md  experiment-logging.md  (+8 more)
Formula/: mnemonic.rb
docs/: DESIGN_continuous_learning.md  PLAN_continuous_learning_phase_a.md  SPEC_continuous_learning.md  crispr-lm-hypothesis-paper.md
evolution/: changelog.md  principles.yaml  prompt_patches.yaml  strategies.yaml
migrations/: 001_init_schema.sql  002_episodic_memory.sql  007_continuous_learning.sql  008_curriculum_generation.sql  009_training_runs.sql
scripts/: backfill_verification.go  continuous_train.sh  create_pitch.py  split-dashboard.py
sdk/: pyproject.toml
sdk/agent/: config.py  conversation_store.py  hooks.py  main.py  options.py  prompts.py  session.py  subagents.py  web.py
sdk/agent/evolution/: changelog.md  principles.yaml  prompt_patches.yaml  strategies.yaml
sdk/tests/: test_hooks.py  test_session.py
tests/: splice_test.cpp
training/: finetune_results.tsv  test_spoke_config.yaml
vscode/: .mocharc.yml  .vscodeignore  esbuild.js  package-lock.json  package.json  tsconfig.json
(+369 files in other folders)
